# ESP32-SmartWatch-Prototype

./: README.md
esp32cam-firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
esp32cam-firmware/main/include/: camera_init.h  flash_service.h  server_service.h
esp32cam-firmware/main/src/: camera_init.c  flash_service.c  server_service.c  wifi_init.c
smartwatch-firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
smartwatch-firmware/main/assets/: wallpaper.c  wallpaper.h
smartwatch-firmware/main/include/init/: lcd_init.h  power_init.h  touch_init.h  ui_init.h
smartwatch-firmware/main/include/services/: battery_service.h  camera_service.h  flash_service.h  imu_service.h  power_service.h  remote_service.h  rtc_service.h  wifi_service.h
smartwatch-firmware/main/include/ui/camera_stream/: camera_stream.h
smartwatch-firmware/main/include/ui/flash_control/: flash_control.h
smartwatch-firmware/main/include/ui/home/: battery.h  home.h  rtc_time.h
smartwatch-firmware/main/include/ui/imu_dashboard/: imu_dashboard.h
smartwatch-firmware/main/include/ui/remote_graph/: remote_graph.h
smartwatch-firmware/main/include/ui/settings/: settings.h
smartwatch-firmware/main/src/: main.c
smartwatch-firmware/main/src/init/: lcd_init.c  power_init.c  touch_init.c  ui_init.c
smartwatch-firmware/main/src/services/: battery_service.c  camera_service.c  flash_service.c  imu_service.c  power_service.c  remote_service.c  rtc_service.c  wifi_service.c
smartwatch-firmware/main/src/ui/camera_stream/: camera_stream.c
smartwatch-firmware/main/src/ui/flash_control/: flash_control.c
smartwatch-firmware/main/src/ui/home/: battery.c  home.c  rtc_time.c
smartwatch-firmware/main/src/ui/imu_dashboard/: imu_dashboard.c
(+13 files in other folders)
