idf_component_register(SRCS "src/main.c"
                    "src/init/lcd_init.c"
                    "src/init/touch_init.c"
                    "src/init/ui_init.c"
                    "src/init/power_init.c"
                    "src/ui/home/home.c"
                    "src/ui/home/battery.c"
                    "src/ui/home/rtc_time.c"
                    "src/ui/settings/settings.c"
                    "src/ui/camera_stream/camera_stream.c"
                    "src/ui/imu_dashboard/imu_dashboard.c"
                    "src/ui/remote_graph/remote_graph.c"
                    "src/ui/flash_control/flash_control.c"
                    "src/services/power_service.c"
                    "src/services/wifi_service.c"
                    "src/services/imu_service.c"
                    "src/services/remote_service.c"
                    "src/services/flash_service.c"
                    "src/services/battery_service.c"
                    "src/services/rtc_service.c"
                    "src/services/camera_service.c"
                    "assets/wallpaper.c"
                    INCLUDE_DIRS ".")
